--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>first git project</title>
+    <link rel="stylesheet" href="blog/style.css">
 </head>
 <body>
-    <h1>asdfa</h1>
+    <div>
+        <h3>This is first Blog</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis ducimus optio consequatur, laudantium quod doloremque esse alias iste sit? Cum animi sapiente perferendis, deleniti voluptate corrupti a error, explicabo eaque quasi amet velit facilis ducimus. Illum explicabo quia eaque, accusantium nemo distinctio laudantium qui mollitia labore nisi obcaecati sapiente, velit ipsum alias dolor ducimus? Rem quidem ad at dolores labore aperiam pariatur expedita ab necessitatibus atque molestias, doloremque, hic perferendis voluptatum porro quae eligendi sed dolore, possimus quasi cupiditate incidunt ratione iusto nam. Pariatur exercitationem asperiores laudantium ullam vero, omnis nesciunt tempora, delectus officiis, eligendi voluptate ducimus? Voluptates, explicabo architecto.</p>
+    </div>
+    <div>
+        <h3>This is second Blog</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis ducimus optio consequatur, laudantium quod doloremque esse alias iste sit? Cum animi sapiente perferendis, deleniti voluptate corrupti a error, explicabo eaque quasi amet velit facilis ducimus. Illum explicabo quia eaque, accusantium nemo distinctio laudantium qui mollitia labore nisi obcaecati sapiente, velit ipsum alias dolor ducimus? Rem quidem ad at dolores labore aperiam pariatur expedita ab necessitatibus atque molestias, doloremque, hic perferendis voluptatum porro quae eligendi sed dolore, possimus quasi cupiditate incidunt ratione iusto nam. Pariatur exercitationem asperiores laudantium ullam vero, omnis nesciunt tempora, delectus officiis, eligendi voluptate ducimus? Voluptates, explicabo architecto.</p>
+    </div>
 </body>
 </html>
